--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -28,6 +28,18 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
 
+  client:
+    build:
+      context: ./services/client
+      dockerfile: Dockerfile-prod
+      args:
+        - NODE_ENV=production
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - 3007:80
+    depends_on:
+      - users
+
   nginx:
     build:
       context: ./services/nginx
@@ -37,3 +49,4 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
