--- a/services/users/Dockerfile-prod
+++ b/services/users/Dockerfile-prod
@@ -1,19 +1,16 @@
 # base image
-FROM python:3.7.2-alpine
+FROM python:3.7.2-slim
 
-# install dependencies
-RUN apk update && \
-    apk add --virtual build-deps gcc python-dev musl-dev && \
-    apk add postgresql-dev && \
-    apk add netcat-openbsd
+# install netcat
+RUN apt-get update && \
+    apt-get -y install netcat && \
+    apt-get clean
 
 # set working directory
-RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 # add and install requirements
 COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN python -m pip install --upgrade pip==19.1.1
 RUN pip install -r requirements.txt
 
 # add entrypoint-prod.sh
