--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -44,7 +44,7 @@ services:
   swagger:
     build:
       context: ./services/swagger
-      dockerfile: Dockerfile-stage
+      dockerfile: Dockerfile-prod
     expose:
       - 8080
     environment:
